+ Bug: Errata - Infantry field guns share ammo across guns   Ruling here: http://bg.battletech.com/forums/tactical-operations/%28answered%29-field-gunsfield-artillery-and-ammo/msg1041873/#msg1041873   This means that the field guns can now swap ammo across guns mid-game, which   was disallowed before.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -153,6 +153,7 @@ v0.41.4-dev (SVN)
 + Data: Various fixes to RATs/Mechfiles/Canon Quirks.
 + Bug: CASE II erroneously flagged as legal vehicle equipment.
 + Bug: Mek Mortar Anti-Personnel ammo implemented according to current errata
++ Bug: Errata - Infantry field guns share ammo across guns
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
