--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -153,6 +153,7 @@ v0.41.4-dev (SVN)
 + Data: Various fixes to RATs/Mechfiles/Canon Quirks.
 + Bug: CASE II erroneously flagged as legal vehicle equipment.
 + Bug: Mek Mortar Anti-Personnel ammo implemented according to current errata
++ Bug: Errata - Infantry field guns share ammo across guns
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
