+ Bug: Piloting penalty for head loss on 'Mechs with torso-mounted cockpits not applied to same-phase PSRs.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -159,6 +159,8 @@ v0.41.4-dev (SVN)
     breached ones.
 + Bug: Considering physical attacks against headless 'Mechs still on the map
     caused Princess to go into an infinite loop.
++ Bug: Piloting penalty for head loss on 'Mechs with torso-mounted cockpits not
+    applied to same-phase PSRs.
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
