--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -164,6 +164,8 @@ v0.41.4-dev (SVN)
 + Bug: Vehicles with dead crews not counted as destroyed for victory purposes.
     (Partial fix -- works for "last man standing" and BV victories, but not yet
     with kill counts.)
++ Patches [#425 to #428] - Various Source and quirks updates.
+
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
