--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -171,6 +171,7 @@ v0.41.4-dev (SVN)
 + Bug: TacOps Vehicle Arcs option had no effect on dual forward and VTOL chin
     turrets.
 + Bug: VSPL anti-infantry damage included general +2 pulse bonus.
++ Refactoring of code in unitDisplay package
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
