--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -174,6 +174,7 @@ v0.41.4-dev (SVN)
 + Refactoring of code in unitDisplay package
 + Feature: Unit quirks can now be saved to the mmconf/unitQuirksOverride.xml via
     a right-click menu item in the ChatLounge
++ Bug: Quad Meks with mechanical JJs path strangely (lots of lateral shifts)
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
