--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -175,6 +175,8 @@ v0.41.4-dev (SVN)
 + Feature: Unit quirks can now be saved to the mmconf/unitQuirksOverride.xml via
     a right-click menu item in the ChatLounge
 + Bug: Quad Meks with mechanical JJs path strangely (lots of lateral shifts)
++ Changed by-range weapon sorting to disregard *minimum* ranges (still going 
+    short > medium > long range brackets otherwise).
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
