+ Bug: Chain whip special attack effects applied to already-destroyed limbs. (Well...I'm at least reasonably sure that shouldn't happen. Note that this fix (a) assumes for simplicity's sake that if the whip's own damage destroys a location no trips and grapples will happen -- we don't seem to have an easy way to test for "was this location already destroyed this phase before the current attack under consideration?", a destroyed leg will lead to a fall anyway, and I'm fuzzy on whether entangling a just-destroyed arm should actually work -- and (b) doesn't care about damage to limb or whip later in a sustained grapple because we don't really have any rules for that either that I'm aware of, so further work may well be needed in the future.) + Bug: Chain whips unable to grapple ProtoMeks. (The code really simply never checked for them.)

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -179,6 +179,8 @@ v0.41.4-dev (SVN)
     short > medium > long range brackets otherwise).
 + Bug: Chain whip special attack effects treat all Meks as bipeds.
 + Bug: Tripods not checking for center leg exposure in level 1 water.
++ Bug: Chain whip special attack effects applied to already-destroyed limbs.
++ Bug: Chain whips unable to grapple ProtoMeks.
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
