--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -182,6 +182,7 @@ v0.41.4-dev (SVN)
 + Bug: Chain whip special attack effects applied to already-destroyed limbs.
 + Bug: Chain whips unable to grapple ProtoMeks.
 + Bug: Portraits object getting referenced after being set to null.
++ Bug: Mek mortars could gain benefits from C3 systems while indirect firing
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
