--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -183,6 +183,7 @@ v0.41.4-dev (SVN)
 + Bug: Chain whips unable to grapple ProtoMeks.
 + Bug: Portraits object getting referenced after being set to null.
 + Bug: Mek mortars could gain benefits from C3 systems while indirect firing
++ Patch [#494]: (Princess) Infantry Damage Prediction Fix
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
