--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -189,6 +189,8 @@ v0.41.4-dev (SVN)
 + Added torso twist and turret rotation context menu entries to targeting phase
     display.
 + Patch [#495]: Princess shoots at buildings with infantry in them
++ Bug [#4234]: Minesweeper vehicle equipment implemented
++ Added minefield reports that can only be seen by minefield owner in DB
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
