--- a/trunk/megamek/i18n/megamek/common/report-messages.properties
+++ b/trunk/megamek/i18n/megamek/common/report-messages.properties
@@ -93,11 +93,16 @@
 2135=<data> (<data>) is dislodged and drowns!
 2140=<data> (<data>) is dislodged and suffers <data> damage.
 2145=<newline><data> can't stand the fire's heat and drops off.
-2150=<newline><data> <B>hits</B> a mine in hex <data>.
+2150=<data> <B>hits</B> a mine in hex <data>.
+2151=A unit enters the <data> minefield in hex <data>, needs <data>+, rolls <data>:
+2152=A minesweeper attempts to clear the <data> minefield in hex <data>, needs 6+, rolls <data>:  
 2155=<newline><data> <B>hits</B> an inferno mine in hex <data>.
 2156=<newline><data> sets off a vibrabomb in hex <data>.
 2157=<data> evades a vibrabomb attack.
+2158=<data> uses minesweeper to clear <data> minefield in hex <data>!
 2160=<data> is hit by a vibrabomb attack.
+2161=<data> takes <data> damage to the minesweeper, <data> armor value remaining.
+2162=<data> damage transfers through the minesweeper!
 2165=The swarming unit, <data>, drowns!
 2170=Inferno removed from <data> (<data>).
 2175=Inferno removed from <data> (<data>) and fire started in hex!
