--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -6,6 +6,7 @@ v0.41.5-dev (SVN)
 + Bug: Clan Special Ammo's for missiles should be enabled.
 + Data: New Sprites and one Map.
 + Patches [#429 to #436] - Various Source and quirks updates.
++ Bug: ArrayIndexOutOfBounds in Chatlounge.MekTableModel.getEntityAt
 
 v0.41.4 (2015-05-31 16:45 UTC)
 + Bug: UnitDisplay System Tab would double up on status modifiers, like * and j
