--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -7,6 +7,7 @@ v0.41.5-dev (SVN)
 + Data: New Sprites and one Map.
 + Patches [#429 to #436] - Various Source and quirks updates.
 + Bug: ArrayIndexOutOfBounds in Chatlounge.MekTableModel.getEntityAt
++ Added composite/reinforced internal structure reminder to damage report.
 
 v0.41.4 (2015-05-31 16:45 UTC)
 + Bug: UnitDisplay System Tab would double up on status modifiers, like * and j
