--- a/megamek/i18n/megamek/common/report-messages.properties
+++ b/megamek/i18n/megamek/common/report-messages.properties
@@ -674,14 +674,16 @@
 6087=\ Reflective armor takes double damage from area effect attack: <data> damage.
 6088=\ Ballistic-reinforced armor takes reduced damage: <data> damage.
 6089=\ Impact-resistant armor takes reduced damage from physical damage: <data> damage.
-6090=Armor destroyed,
+6090=Armor destroyed.
+6091=Composite internal structure takes double damage.
+6092=Reinforced internal structure takes half damage.
 6095=<data> men alive
-6100=\ <font color='0000FF'><data> Internal Structure remaining</font>
+6100=\ <font color='0000FF'><data> Internal Structure remaining.</font>
 6105=\ <font color='C00000'>PLATOON KILLED</font>,
 6106=\ <font color='C00000'>SQUAD KILLED</font>,
 6110=\ <font color='C00000'>TROOPER KILLED</font>,
 6111=\ <font color='C00000'>TROOPER <data> KILLED</font>,
-6115=\ <font color='C00000'>SECTION DESTROYED</font>,
+6115=\ <font color='C00000'>SECTION DESTROYED.</font>
 6120=<font color='C00000'>LIMB BLOWN OFF <data> blown off.</font>
 6124=<data> damage redirected to rear armor by CASE.
 6125=remaining <data> damage prevented by CASE.
