--- a/trunk/megamek/i18n/megamek/common/report-messages_de.properties
+++ b/trunk/megamek/i18n/megamek/common/report-messages_de.properties
@@ -475,12 +475,14 @@
 6085=\ <data> Punkte Panzerung verbleiben.
 6086=\ <data> Punkte Panzerung verbleiben (besch\u00e4digt).
 6087=\ Reflektivpanzerung nimmt doppelten Schaden durch Fl\u00e4chenangriff: <data> Schaden.
-6090=Panzerung zerst\u00f6rt,
+6090=Panzerung zerst\u00f6rt.
+6091=Kompositstruktur nimmt doppelten Schaden.
+6092=Verst\u00e4rkte Struktur nimmt halben Schaden.
 6095=\ <data> Mann am Leben
-6100=\ <data> interne Struktur verbleiben
+6100=\ <data> Punkte interne Struktur verbleiben.
 6105=\ <<<PLATOON GET\u00d6TET>>>,
 6110=\ <<<TROOPER GET\u00d6TET>>>,
-6115=\ <<<SEKTION ZERST\u00d6RT>>>,
+6115=\ <<<SEKTION ZERST\u00d6RT>>>.
 6120=<<<ABGERISSEN>>> <data> abgerissen.
 6125=\ <data> verbleiben und werden durch CASE verhindert.
 6126=\ <data> verbleiben und werden durch CASE II abgeleitet.
