--- a/megamek/i18n/megamek/common/report-messages_de.properties
+++ b/megamek/i18n/megamek/common/report-messages_de.properties
@@ -240,6 +240,8 @@
 3330=\ (ECM verhindert Bonus)
 3335=\ (aktive Tarnung verhindert Bonus)
 3340=\ (mit +<data> Bonus)
+3341=\ (mit -<data> Malus)
+3342=\ (ELSR-Minimalreichweite)
 3345=.
 3350=RAS aktiviert sich.
 3355=RAS zerst\u00f6rt alle ankommenden Raketen!
