--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -8,6 +8,7 @@ v0.41.5-dev (SVN)
 + Patches [#429 to #436] - Various Source and quirks updates.
 + Bug: ArrayIndexOutOfBounds in Chatlounge.MekTableModel.getEntityAt
 + Added composite/reinforced internal structure reminder to damage report.
++ Bug: Extended LRMs hitting with full rack size at minimum range.
 
 v0.41.4 (2015-05-31 16:45 UTC)
 + Bug: UnitDisplay System Tab would double up on status modifiers, like * and j
