--- a/trunk/megamek/i18n/megamek/common/report-messages.properties
+++ b/trunk/megamek/i18n/megamek/common/report-messages.properties
@@ -310,6 +310,7 @@
 3335=\ (active Stealth prevents bonus)
 3340=\ (w/ +<data> bonus)
 3341=\ (w/ <data> malus)
+3342=\ (ELRM minimum range)
 3345=.
 3350=AMS engaged! 
 3360=<data> missile(s) get through.
