+ Translation: Added capability to translate wind direction. Added Russian for these directions.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -9,6 +9,7 @@ v0.41.5-dev (SVN)
 + Bug: ArrayIndexOutOfBounds in Chatlounge.MekTableModel.getEntityAt
 + Added composite/reinforced internal structure reminder to damage report.
 + Bug: Extended LRMs hitting with full rack size at minimum range.
++ Translation: Added capability to translate wind direction.
 
 v0.41.4 (2015-05-31 16:45 UTC)
 + Bug: UnitDisplay System Tab would double up on status modifiers, like * and j
