--- a/megamek/i18n/megamek/common/messages_ru.properties
+++ b/megamek/i18n/megamek/common/messages_ru.properties
@@ -76,6 +76,12 @@ PlanetaryConditions.High=Высокая
 PlanetaryConditions.Very\ High=Очень высокая
 PlanetaryConditions.Light\ Fog=Легкий туман
 PlanetaryConditions.Heavy\ Fog=Сильный туман
+PlanetaryConditions.North=К северу
+PlanetaryConditions.Northeast=К северо-востоку
+PlanetaryConditions.Southeast=К юго-востоку
+PlanetaryConditions.South=К югу
+PlanetaryConditions.Southwest=К юго-западу
+PlanetaryConditions.Northwest=К северо-западу
 UnitType.Aero=Аэрокосмический истребитель
 UnitType.BattleArmor=Бронепехота
 UnitType.Conventional\ Fighter=Обычный истребитель
