--- a/megamek/i18n/megamek/common/messages.properties
+++ b/megamek/i18n/megamek/common/messages.properties
@@ -76,6 +76,12 @@ PlanetaryConditions.High=High
 PlanetaryConditions.Very\ High=Very High
 PlanetaryConditions.Light\ Fog=Light Fog
 PlanetaryConditions.Heavy\ Fog=Heavy Fog
+PlanetaryConditions.North=North
+PlanetaryConditions.Northeast=Northeast
+PlanetaryConditions.Southeast=Southeast
+PlanetaryConditions.South=South
+PlanetaryConditions.Southwest=Southwest
+PlanetaryConditions.Northwest=Northwest
 UnitType.Aero=Aerospace Fighter
 UnitType.BattleArmor=Battle Armor
 UnitType.Conventional\ Fighter=Conventional Fighter
