+ Bug: Lances and flails failing outright from arm actuator damage rather than accruing penalties. (There's a *construction* rule saying an arm mounting them "requires" upper and lower arm actuators, but nothing in the text about using them -- indeed, flail damage is explicitly exempt from actuator damage affecting it, which would make no sense if the first arm hit disabled the whole weapon anyway.) + Bug: Shield bashes auto-punching instead of being aimable as per hatchet rules.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -11,6 +11,10 @@ v0.41.5-dev (SVN)
 + Bug: Extended LRMs hitting with full rack size at minimum range.
 + Translation: Added capability to translate wind direction.
 + Patches [#437 to #441] - Various Source updates and new sprites.
++ Bug: Lances and flails failing outright from arm actuator damage rather than
+    accruing penalties.
++ Bug: Shield bashes auto-punching instead of being aimable as per hatchet
+    rules.
 
 v0.41.4 (2015-05-31 16:45 UTC)
 + Bug: UnitDisplay System Tab would double up on status modifiers, like * and j
