--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -15,6 +15,7 @@ v0.41.5-dev (SVN)
     accruing penalties.
 + Bug: Shield bashes auto-punching instead of being aimable as per hatchet
     rules.
++ Bug [#4557]: Landed VTOLs get zip-line PSR warning unloading non-jump inf
 
 v0.41.4 (2015-05-31 16:45 UTC)
 + Bug: UnitDisplay System Tab would double up on status modifiers, like * and j
