--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -18,6 +18,7 @@ v0.41.5-dev (SVN)
 + Bug [#4557]: Landed VTOLs get zip-line PSR warning unloading non-jump inf
 + Bug [#4558]: Sensor returns can be targeted in firing phase (revealing info)
 + Bug [#4529]: Princess gets stuck computing moves for air dropping infantry
++ Bug: RAC 5-shot mode reported as "Normal" in chat window.
 
 v0.41.4 (2015-05-31 16:45 UTC)
 + Bug: UnitDisplay System Tab would double up on status modifiers, like * and j
