+ Bug [#2422] partial: Fix for initiative report. Implement backwards compatibility. Slowly converting report.add() to just passing translation keys. Then having each routine translate just before displaying the text.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -20,6 +20,7 @@ v0.41.5-dev (SVN)
 + Bug [#4529]: Princess gets stuck computing moves for air dropping infantry
 + Bug: RAC 5-shot mode reported as "Normal" in chat window.
 + Bug: Previous commit had unreadable Russian equipmentmessages_ru.properties file.
++ Bug [#2422] partial: Fix for initiative report. Implement backwards compatibility.
 
 v0.41.4 (2015-05-31 16:45 UTC)
 + Bug: UnitDisplay System Tab would double up on status modifiers, like * and j
