--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -21,6 +21,10 @@ v0.41.5-dev (SVN)
 + Bug: RAC 5-shot mode reported as "Normal" in chat window.
 + Bug: Previous commit had unreadable Russian equipmentmessages_ru.properties file.
 + Bug [#2422] partial: Fix for initiative report. Implement backwards compatibility.
++ Bug: Secondary Swarm LRM damage against infantry based on original rack size,
+    not number of missiles left.
++ Bug: Swarm LRMs still using BMR rules to decide cluster table column for
+    secondary attacks.
 
 v0.41.4 (2015-05-31 16:45 UTC)
 + Bug: UnitDisplay System Tab would double up on status modifiers, like * and j
