--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -727,7 +727,7 @@ QuirksInfo.option.oversized.description=No game effect,\nincluded for completene
 QuirksInfo.option.poor_life_support.displayableName=Poor Life Support
 QuirksInfo.option.poor_life_support.description=easier to damage mechwarrior from heat when life support damaged. (SO pg 198)
 QuirksInfo.option.poor_performance.displayableName=Poor Performance
-QuirksInfo.option.poor_performance.description=Cannot accelerate immediately to Running/Flanking speed.\nNot yet implemented. (SO pg 199)
+QuirksInfo.option.poor_performance.description=Cannot accelerate immediately to Running/Flanking speed. (SO pg 199)
 QuirksInfo.option.poor_sealing.displayableName=Poor Sealing
 QuirksInfo.option.poor_sealing.description=Unit is more likely to suffer a breach and must test for a breach any time a hostile environment is entered.\nNot yet implemented. (RS NTNU 3145 pg 15)
 QuirksInfo.option.poor_target_short.displayableName=Poor Targeting (short)
