+ Bug: Potential StackOverflowException in UnitDisplay.processKeyBinding   I removed code that takes a KeyEvent in processKeyBinding in UnitDisplay and   forwards it to the ClientGUI current panel.  I had added this code before   implementing MegamekController, to make the key presses more responsive.   I knew of the potential for stack overflows, but I didn't experience them   often.  I've been noticing it coming up in games recently, and with   MegamekController, the code should no longer be necessary.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -38,6 +38,7 @@ v0.41.5-dev (SVN)
 + Data: New Sprites/HB HK and TP:Irian 
 + RFE [#1169] IS ammo in Clan Arrow IV (Ammo added as unofficial)
 + Feature: Added weapon ranges to weapon list tool tip entry
++ Bug: Potential StackOverflowException in UnitDisplay.processKeyBinding
 
 v0.41.4 (2015-05-31 16:45 UTC)
 + Bug: UnitDisplay System Tab would double up on status modifiers, like * and j
