+ Bug: Unconscious pilots still making shutdown/startup rolls. (You need to be conscious to do that.) + Bug: Quad 'Mechs randomly getting -2 to shutdown/startup checks. (I think somebody reflexively applied the quad PSR bonus here back in the day, but that's only to avoid falls...)

--- a/megamek/i18n/megamek/common/report-messages.properties
+++ b/megamek/i18n/megamek/common/report-messages.properties
@@ -516,10 +516,12 @@
 5041=avoids successfully!
 5042=<font color='C00000'>fails to avoid explosion.</font>
 5045=<data> (<data>) automatically starts up.
+5049=<data> (<data>) has no pilot active to attempt override; remains shut down.
 5050=<data> (<data>) needs a <data>+ to start up, rolls <data> : <msg:5051,5052>
 5051=successful!
 5052=fails.
 5055=<data> (<data>) automatically shuts down.
+5056=<data> (<data>) has no pilot active to attempt override; shuts down.
 5060=<data> (<data>) needs a <data>+ to avoid shutdown, rolls <data> : <msg:5061,5062>
 5061=avoids successfully!
 5062=shuts down.
