--- a/megamek/i18n/megamek/common/report-messages_de.properties
+++ b/megamek/i18n/megamek/common/report-messages_de.properties
@@ -371,10 +371,12 @@
 5041=Erfolgreich verhindert!
 5042=Munition explodiert.
 5045=<data> (<data>) startet automatisch wieder.
-5050=<data> (<data>) ben\u00f6tigt <data>+, um zu Starten, w\u00fcrfelt <data> : <msg:5051,5052>
+5049=<data> (<data>) hat keinen aktiven Piloten, der einen Notstart versuchen k\u00f6nnte; bleibt abgeschaltet.
+5050=<data> (<data>) ben\u00f6tigt <data>+, um zu starten, w\u00fcrfelt <data> : <msg:5051,5052>
 5051=Erfolg!
 5052=Fehlschlag.
 5055=<data> (<data>) schaltet sich automatisch ab.
+5056=<data> (<data>) hat keinen aktiven Piloten, der die Notabschaltung verhindern k\u00f6nnte, und schaltet sich daher automatisch ab.
 5060=<data> (<data>) ben\u00f6tigt <data>+, um Abschaltung zu vermeiden, w\u00fcrfelt <data> : <msg:5061,5062>
 5061=Erfolgreich vermieden!
 5062=Schaltet sich ab.
