+ Bug [#4567]: Pathplanner A* heuristic underestimates path cost in certain situations

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -50,6 +50,8 @@ v0.41.5-dev (SVN)
 + Bug: Damage absorbed by modular armor not counted towards "damage this phase".
 + Bug [#4564]: Secondary Swarm LRM attacks "inherit" attack direction and
     called-shot status from original target.
++ Bug [#4567]: Pathplanner A* heuristic underestimates path cost in certain
+    situations
 
 v0.41.4 (2015-05-31 16:45 UTC)
 + Bug: UnitDisplay System Tab would double up on status modifiers, like * and j
