+ Bug [#4563]: Mouse-over info no longer shows the unit´s remaining armor and structure points

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -188,6 +188,9 @@ BoardView1.Tooltip.Pilot={0}: {1}/{2}
 BoardView1.Tooltip.PilotStatus=<FONT COLOR=#FF0000> ({0})</FONT>
 BoardView1.Tooltip.Advs=<BR><FONT SIZE=-2 COLOR=#555555>&nbsp;&nbsp;{0} Advs.;</FONT>
 BoardView1.Tooltip.Adv1=<BR><FONT SIZE=-2 COLOR=#555555>&nbsp;&nbsp;1 Adv.;</FONT>
+BoardView1.Tooltip.ArmorInternals=Armor {0}; Internal {1}
+BoardView1.Tooltip.Armor=Armor: {0}
+BoardView1.Tooltip.Internals=Internal: {0}
 BoardView1.Tooltip.MD=<FONT SIZE=-2 COLOR=#555555>&nbsp;&nbsp;Manei Domini</FONT>
 BoardView1.Tooltip.Movement=Movement: {0}/{1}
 BoardView1.Tooltip.Evade=<BR><I><FONT COLOR=RED>(Evading)</FONT></I>
