--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -253,6 +253,8 @@ v0.41.4 (2015-05-31 16:45 UTC)
     (only Industrials get heat-free ground movement)
 + Ruling: Engine stalls for ICE 'Mechs are for Industrials and BattleMechs both
 + Bug: MechView armored cockpit/engine identification not working as intended
++ Bug [#4563]: Mouse-over info no longer shows the unit´s remaining armor and
+    structure points
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
