--- a/megamek/i18n/megamek/common/report-messages.properties
+++ b/megamek/i18n/megamek/common/report-messages.properties
@@ -274,6 +274,8 @@
 3194=<data> (<data>) gets lucky as FLAK rounds explode at a different altitude.
 3195=<font color='808080'><B>misses</B></font> and scatters to hex <data>.
 3196=<font color='808080'><B>misses</B></font> the intended hex <data>.
+3197=<font color='808080'><B>misses</B></font> and scatters to hex <data>. (Density reduced.)
+3198=<font color='808080'><B>misses</B></font> and is rendered ineffective by scatter.
 3200=<font color='808080'><B>misses</B></font> and scatters off the board.
 3205=<data> (<data>) now on fire for <data> turns.
 3210=<newline>In hex <data>:
