--- a/megamek/i18n/megamek/common/report-messages_de.properties
+++ b/megamek/i18n/megamek/common/report-messages_de.properties
@@ -207,6 +207,8 @@
 3193=verfehlt und die FLAK Granaten weichen vom Schlachtfeld ab.
 3194=<data> (<data> hat Gl\u00fcck und die FLAK Granaten explodieren in einer anderen H\u00f6he.
 3195=verfehlt und weicht nach Hex <data> ab.
+3197=verfehlt und weicht nach Hex <data> ab. (Minendichte reduziert.)
+3198=verfehlt und verstreut sich ohne Wirkung.
 3200=verfehlt und weicht vom Schlachtfeld ab.
 3205=<data> (<data>) brennt jetzt f\u00fcr <data> Runden.
 3210=in Feld <data>
