+ Patch [#492]: Individual weapon field of fire

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -964,6 +964,8 @@ KeyBinds.cmdNames.movementEnvelope=Movement Envelope
 KeyBinds.cmdDesc.movementEnvelope=Computes all of the possible moves for the currently selected unit
 KeyBinds.cmdNames.autoArtyDeployZone=Deployment Zones
 KeyBinds.cmdDesc.autoArtyDeployZone=Show all players' deployment zones during auto artillery target designation
+KeyBinds.cmdNames.fieldOfFire=Field of Fire
+KeyBinds.cmdDesc.fieldOfFire=Show the field of fire of a selected weapon on the board
 
 LOSDialog.inFirstHex=In first hex:
 LOSDialog.InSecondHex=In second hex:
